# Cherry

./: .gitignore  CMakeLists.txt
include/: cherry.hpp
tests/: test_all.cpp
